--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,8 @@ email: hayavadhan@gmail.com
 description: User Experience Design Portfolio of Hayavadhan.
 baseurl: "/ux_portfolio" # the subpath of your site, e.g. /blog
 url: "https://hayavadhan.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+linkedin_username: hayavadhan
+dribbble_username: hayavadhan
 
 # Build settings
 theme: minima
